welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:2: error: not found: value nbCotes
  while(nbCotes < 4){
        ^MethodsDogHouse:3: error: not found: value nbCotes
    avance(); avance(); gauche(); nbCotes = nbCotes + 1
                                  ^