welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse(){
  while(nbCotes < 4){
    avance(); avance(); gauche(); nbCotes = nbCotes + 1
  }
}
